Bevel doesn't work with some certain position of a loop. #91810

Closed
opened 2021-09-29 12:49:17 +02:00 by Sergei Sobolev · 17 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 2.93.3, branch: master, commit date: 2021-08-17 18:30, hash: 8b80d19f36
Worked: (newest version of Blender that worked as expected)

Short description of error
[Bevel doesn't work with some certain position of a loop.
I can't remember how I did it, but for some reason, this loop doesn't allow doing the right bevel. If I little move it it will allow, but I spent a lot of time for searching what happens in my whole model. I have several of these kinds of issues. geometry and normals are right. ]

bug_5.blend

2021-09-29_15-41-28.png

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 2.93.3, branch: master, commit date: 2021-08-17 18:30, hash: `8b80d19f36` Worked: (newest version of Blender that worked as expected) **Short description of error** [Bevel doesn't work with some certain position of a loop. I can't remember how I did it, but for some reason, this loop doesn't allow doing the right bevel. If I little move it it will allow, but I spent a lot of time for searching what happens in my whole model. I have several of these kinds of issues. geometry and normals are right. ] [bug_5.blend](https://archive.blender.org/developer/F10669464/bug_5.blend) ![2021-09-29_15-41-28.png](https://archive.blender.org/developer/F10669469/2021-09-29_15-41-28.png) **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @Hrofti

Added subscriber: @Hrofti

#91811 was marked as duplicate of this issue

#91811 was marked as duplicate of this issue

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Not sure how you end up with this example, but if I select all vertices and change Mean Bevel Weight in side panel this doesn't happen.

I think here we would need steps to reproduce the issue from good state, do you think you can cause this again? Also not sure if what are other similar issues you have.

Not sure how you end up with this example, but if I select all vertices and change Mean Bevel Weight in side panel this doesn't happen. I think here we would need steps to reproduce the issue from good state, do you think you can cause this again? Also not sure if what are other similar issues you have.
Author

I created the first segment. Marked bewel weight. Duplicated. Moved with snapping and automerge. Deleted inner parts. Recolcelated normals. STH like this

I created the first segment. Marked bewel weight. Duplicated. Moved with snapping and automerge. Deleted inner parts. Recolcelated normals. STH like this

I see, that some edges have bevel weight of 0.5 and some 0. Checked duplicating geometry, merging with snapping and also recalculate normals operator, this doesn't lead to loss of bevel weight setting. Extrusion does produce edges with 0 bevel weight, but not sure if you used that operator.

Can you repeat the process and check what operation causes this?

I see, that some edges have bevel weight of 0.5 and some 0. Checked duplicating geometry, merging with snapping and also recalculate normals operator, this doesn't lead to loss of bevel weight setting. Extrusion does produce edges with 0 bevel weight, but not sure if you used that operator. Can you repeat the process and check what operation causes this?
Author

I am not sure that it is this but I tried to reconstruct the bug. The step by step file bug_7.blend

I am not sure that it is this but I tried to reconstruct the bug. The step by step file [bug_7.blend](https://archive.blender.org/developer/F10685508/bug_7.blend)
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Added subscriber: @mano-wii

Added subscriber: @mano-wii

In #91810#1228551, @Hrofti wrote:
I am not sure that it is this but I tried to reconstruct the bug. The step by step file bug_7.blend

Thanks for step by step file. I think this should work and when I move vertices a bit bevel is formed properly.

@mano-wii do you think this is bug? I will try to look at code to see if I would be able to tell but can't promise I will come to conclusion with great certainty.

> In #91810#1228551, @Hrofti wrote: > I am not sure that it is this but I tried to reconstruct the bug. The step by step file [bug_7.blend](https://archive.blender.org/developer/F10685508/bug_7.blend) Thanks for step by step file. I think this should work and when I move vertices a bit bevel is formed properly. @mano-wii do you think this is bug? I will try to look at code to see if I would be able to tell but can't promise I will come to conclusion with great certainty.

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Added subscriber: @howardt

Added subscriber: @howardt

I investigated Mesh and the problem starts with the new edges created by the Knife operator. They have the Bevel Weight 0.0.
Apparently the Bevel operator doesn't work properly with these 0.0 weight edges.
Captura de Tela 2021-09-30 às 11.26.57.png

This looks like a bug because, in my opinion, these edges shouldn't affect the result this way.
@howardt should better understand what's going on here.

I investigated Mesh and the problem starts with the new edges created by the Knife operator. They have the `Bevel Weight` `0.0`. Apparently the Bevel operator doesn't work properly with these `0.0` weight edges. ![Captura de Tela 2021-09-30 às 11.26.57.png](https://archive.blender.org/developer/F10692826/Captura_de_Tela_2021-09-30_a_s_11.26.57.png) This looks like a bug because, in my opinion, these edges shouldn't affect the result this way. @howardt should better understand what's going on here.
Member

It is fine that some edges have Bevel weight 0.0. The user intended that here, using a limit method of weight to exclude the weight 0 edges from being beveled.

The problem here is that code added to fix #71329 messes this case up. When we aren't sliding (and with a good place to slide) and all intermediate non-beveled edges are in the same plane, then we should just ignore the intermediate edges when setting the meet point. This works but I've run into difficulties checking that #71329 remains fixed, so I have to fix a crash there first before fixing this bug.

It is fine that some edges have Bevel weight 0.0. The user intended that here, using a limit method of weight to exclude the weight 0 edges from being beveled. The problem here is that code added to fix #71329 messes this case up. When we aren't sliding (and with a good place to slide) and all intermediate non-beveled edges are in the same plane, then we should just ignore the intermediate edges when setting the meet point. This works but I've run into difficulties checking that #71329 remains fixed, so I have to fix a crash there first before fixing this bug.

This issue was referenced by 98fe05fb5b

This issue was referenced by 98fe05fb5b9e1e2ee184444ff56806fa66de2615
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Howard Trickey self-assigned this 2021-10-03 17:33:29 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91810
No description provided.