Fix T91810 Bevel not working well with certain unbeveled edge positions.

A previous commit, c56526d8b68ab, which sometimes didn't drop offsets
into 'in plane' faces, as a fix to T71329, was overly aggressive.
If all the intermediate edges are in the same plane then it is fine
to just put the meeting point on the plane of the start and end edges.